--- a/path/index.html
+++ b/path/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<div class="card">
-			<h1>Hello from @huggingface/hub!</h1>
+			<h1>Hello from @huggingface/hub via github action!</h1>
 		</div>
 	</body>
 </html>
