--- a/path/index.html
+++ b/path/index.html
@@ -9,6 +9,7 @@
 	<body>
 		<div class="card">
 			<h1>Hello from @huggingface/hub via github action!</h1>
+      <p>Change one</p>
 		</div>
 	</body>
 </html>
