--- a/path/index.html
+++ b/path/index.html
@@ -10,6 +10,7 @@
 		<div class="card">
 			<h1>Hello from @huggingface/hub via github action!</h1>
       <p>Change one</p>
+      <p>Change Two</p>
 		</div>
 	</body>
 </html>
