--- a/path/index.html
+++ b/path/index.html
@@ -10,7 +10,8 @@
 		<div class="card">
 			<h1>Hello from @huggingface/hub via github action!</h1>
       <p>Change one</p>
-      <p>Change Two</p>
+      <p>Change two</p>
+      <p>Change three</p>
 		</div>
 	</body>
 </html>
