--- a/path/index.html
+++ b/path/index.html
@@ -12,6 +12,7 @@
       <p>Change one</p>
       <p>Change two</p>
       <p>Change three</p>
+      <p>Change four</p>
 		</div>
 	</body>
 </html>
