--- a/path/index.html
+++ b/path/index.html
@@ -14,6 +14,8 @@
       <p>Change three</p>
       <p>Change four</p>
       <p>Change five</p>
+      <p>Change six</p>
+
 		</div>
 	</body>
 </html>
