--- a/path/index.html
+++ b/path/index.html
@@ -15,7 +15,7 @@
       <p>Change four</p>
       <p>Change five</p>
       <p>Change six</p>
-
+      <p>Change seven</p>
 		</div>
 	</body>
 </html>
